Unreviewed, fix exception check errors https://bugs.webkit.org/show_bug.cgi?id=304782 rdar://167333337

* Source/JavaScriptCore/runtime/JSMicrotask.cpp:
(JSC::asyncGeneratorReject):
(JSC::asyncGeneratorResolve):
(JSC::doAsyncGeneratorBodyCall):

Canonical link: https://commits.webkit.org/305001@main